chore: Update front-1, front-2, and front-3 services descriptions

--- a/src/services/front-1.service
+++ b/src/services/front-1.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Este es el front 1
+Description=este es el front 1
 Documentation=https://github.com/test-app
 After=network.target
 
