--- a/src/services/front-1.service
+++ b/src/services/front-1.service
@@ -8,7 +8,7 @@ Environment=PORT=3001
 Type=simple
 User=ubuntu
 WorkingDirectory=/opt/app/NNotes
-ExecStart=npm run start -- --port 3001
+ExecStart=/usr/bin/node npm run start -- --port 3001
 Restart=on-failure
 
 [Install]
