chore: Update front-1, front-2, and front-3 services descriptions

--- a/src/services/front-1.service
+++ b/src/services/front-1.service
@@ -1,6 +1,6 @@
 [Unit]
-Description=este es el front 1
-Documentation=https://github.com/test-app
+Description=Servicio del Front 1
+Documentation=https://github.com/italovisconti/NNotes/blob/main/src/services/front-1.service
 After=network.target
 
 [Service]
